[package]
name = "rust-media-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_media_engine"
crate-type = ["cdylib"]

[dependencies]
# Python integration
pyo3 = { version = "=0.28.0", features = ["extension-module", "abi3"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.13.1", default-features = false, features = [
  "rustls",
  "http2",
] }

# Image processing
image = { version = "0.25.6", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }

# AVIF encoding
ravif = "0.13.0"
rgb = "0.8"

# Error handling
anyhow = "1.0.99"

# Logging
log = "0.4"
env_logger = "0.11"

# Retry logic
tokio-retry = "0.3"

# XML parsing for DASH manifests
roxmltree = "0.21.1"

# URL joining for DASH base URLs
url = "2.5.8"
